--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -1,4 +1,29 @@
 easy_admin:
+    site_name: Conference GuestBook
+
+    design:
+        menu:
+          - { route: 'homepage', lable: 'Back to the website', icon: 'home' }
+          - { route: 'Conference', lable: 'Conferences', icon: 'map-marker' }
+          - { route: 'Comment', lable: 'Comments', icon: 'comments' }
+
     entities:
-      - App\Entity\Conference
-      - App\Entity\Comment
+        Conference:
+            class: App\Entity\Conference
+
+        Comment:
+            class: App\Entity\Conference
+            list:
+                fields:
+                  - author
+                  - { property: 'email', type: 'email' }
+                  - { property: 'createdAt', type: 'datetime' }
+                sort: ['createdAt', 'ASC']
+                filters: ['conference']
+            edit:
+                fields:
+                  - { property: 'conference' }
+                  - { property: 'createdAt', type: datetime, type_options: { disabled: true } }
+                  - 'author'
+                  - { property: 'email', type: 'email' }
+                  - text
