Add exclude file in idea directory

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,9 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+.idea/php.xml
+.idea/guestbook_two.iml
+
 
 ###> symfony/framework-bundle ###
 /.env.local
