Change test field to text

--- a/config/packages/easy_admin.yaml
+++ b/config/packages/easy_admin.yaml
@@ -26,4 +26,4 @@ easy_admin:
                     - { property: 'createdAt', type: datetime, type_options: { disabled: true } }
                     - 'author'
                     - { property: 'email', type: 'email' }
-                    - test
+                    - text
